用了知乎的开源库，增加了照片选择，以及其他界面改了乱七八糟的布局

--- a/app/src/main/res/layout/activity_eg2_frame_layout.xml
+++ b/app/src/main/res/layout/activity_eg2_frame_layout.xml
@@ -12,9 +12,10 @@
         android:text="这是一个在FrameLayout里的文字"/>
     <Button
         android:onClick="goToEg2brunch"
-        android:layout_width="wrap_content"
+        style="@style/commonStyle"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:background="@drawable/black_circular_view"
         android:text="这是一个按钮点击进入更深的页面"/>
     <TextView
         android:id="@+id/visitCount"
