--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,10 +103,13 @@
             android:layout_weight="1"
             android:text="@string/eg10"/>
         <TextView
+            android:onClick="goToEg11"
+            android:gravity="center"
+            android:background="@color/blue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="1111"/>
+            android:text="@string/eg11"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
